--- a/assets/scss/Home.module.scss
+++ b/assets/scss/Home.module.scss
@@ -1,13 +1,4 @@
-@import './root';
-
-.right {
-  width: 83%;
-  height: 100%;
-  background-color: var(--background-color);
-  overflow-x: hidden;
-  overflow-y: scroll;
-
-  .home {
+.home {
     display: flex;
     flex-direction: column;
     justify-content: start;
@@ -19,7 +10,7 @@
     .player {
         display: flex;
         flex-direction: column;
-        background-color: var(--second-background-color);
+        background-color: $second-background-color;
         border-radius: 2vh;
         min-height: none;
         height: auto;
@@ -51,7 +42,7 @@
             &:hover {
                 border-top-right-radius: 2vh;
                 border-top-left-radius: 2vh;
-                background-color: var(--hover-background-color);
+                background-color: $hover-background-color;
             }
             &:hover > .text {
                 text-decoration: underline;
@@ -89,7 +80,7 @@
                 margin: 0 1vh 0 0;
                 font-size: 2vh;
                 font-weight: 500;
-                color: var(--text-color);
+                color: $text-color;
             }
 
             .badges {
@@ -131,7 +122,7 @@
                 margin-left: auto;
                 padding: 0;
                 
-                .info-item {
+                .infoItem {
                     display: flex;
                     flex-direction: row;
                     justify-content: start;
@@ -164,11 +155,11 @@
             max-height: 70%;
             width: auto;
             max-width: 100%;
-            border-top: 1px solid var(--background-color);
-            border-bottom: 1px solid var(--background-color);
+            border-top: 1px solid $background-color;
+            border-bottom: 1px solid $background-color;
 
             video, img {
-                background-color: var(--second-background-color);
+                background-color: $second-background-color;
                 width: auto;
                 max-width: 100%;
                 height: auto;
@@ -180,7 +171,7 @@
                 flex-direction: row;
                 justify-content: start;
                 align-items: flex-start;
-                color: var(--text-color);
+                color: $text-color;
                 font-size: 2vh;
                 font-weight: 400;
                 padding: 2vh 4vh 2vh 4vh;
@@ -219,11 +210,11 @@
                     margin: 0 1vh 0 0;
                     padding: 1vh;
                     border-radius: 2vh;
-                    background-color: var(--second-color);
+                    background-color: $second-color;
                     cursor: pointer;
 
                     &:hover {
-                        background-color: var(--hover-second-color);
+                        background-color: $hover-second-color;
                     }
                 }
             }
@@ -262,4 +253,3 @@
     // .comments {}
     // }
 }
-} 
