--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -1,5 +1,141 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
-@import './root.scss';
+@import 'root.scss';
+
+html,
+body {
+    scroll-behavior: smooth;
+    background-color: $background-color;
+    color: $text-color;
+    margin: 0 !important;
+    padding: 0 !important;
+    height: 100vh;
+    width: 100vw;
+}
+
+body {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+    .leftPanel {
+        display: flex;
+        flex-direction: column;
+        float: left;
+        justify-content: flex-start;
+        align-items: left;
+        width: 17%;
+        height: 100%;
+        background-color: $second-background-color;
+        background: linear-gradient(0deg, $second-color 0%, $second-background-color 40%); //#ff63e5
+        padding: 0 18px 0 18px;
+        overflow-x: hidden;
+        overflow-y: hidden;
+
+        .logo {
+            position: relative;
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-start;
+            align-items: center;
+            width: 100%;
+            height: 10%;
+            padding: 18px 18px 0 18px;
+            border-radius: 2vh;
+            cursor: pointer;
+
+            img {
+                max-width: 100%; // !important
+                max-height: 100%; // !important
+            }
+        }
+
+        .menu {
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: center;
+            width: 100%;
+            height: 90%;
+            padding: 8px 0 8px 0;
+            list-style-type: none;
+
+            .menuItem {
+                position: relative;
+                display: flex;
+                flex-direction: row;
+                justify-content: flex-start;
+                align-items: center;
+                width: 100%;
+                height: 40px;
+                padding: 25px 15px 25px 15px;
+                margin: 3px 0 3px 0;
+                border-radius: 2vh;
+                cursor: pointer;
+                
+                &:hover {
+                    background-color: $hover-background-color;
+                    text-decoration: none;
+                }
+
+                &:last-child {
+                    margin-top: auto;
+                    margin-bottom: 25px;
+
+                    &:hover {
+                        background-color: $hover-second-color;
+                    }
+                }
+
+                img {
+                    width: 30px;
+                    margin-left: 0.5em;
+                    max-width: 12%;
+                    height: 30px;
+                    margin-right: 15px;
+                    border-radius: 50%;
+                    border: 2px solid transparent;
+                }
+
+                span {
+                    font-size: 18px;
+                    margin-left: 12%;
+                }
+                
+                sup {
+                    display: inline-flex;
+                    justify-content: center;
+                    align-items: center;
+                    // width: 1.2em;
+                    width: 17px;
+                    // height: 1.2em;
+                    height: 17px;  
+                    background-color: $second-color;  
+                    border-radius: 50%; 
+                    font-size: 0.7em;
+                    line-height: 100%;
+                    vertical-align: super;
+                }
+            }
+
+            hr {
+                height: 0.01em;
+                width: 100%;
+                background-color: $background-color;
+                border: none;
+            }
+        }
+    }
+
+    .rightPanel {
+        display: flex;
+        float: left;
+        width: 83%;
+        height: 100%;
+        background-color: $background-color;
+        overflow-x: hidden;
+        overflow-y: scroll;
+    }
+}
 
 * {
     box-sizing: border-box;
@@ -7,40 +143,17 @@
     font-family: $font-family;
 }
 
-html,
-body {
-    scroll-behavior: smooth;
-    background-color: $background-color;
+a {
+    text-decoration: none;
     color: $text-color;
-    margin: 0;
-    padding: 0;
-}
+    cursor: pointer;
 
-.container {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    width: 100vw;
-
-    a {
-        text-decoration: none;
-        color: $text-color;
-        cursor: pointer;
-
-        &:hover {
-            text-decoration: underline;
-        }
+    &:hover {
+        text-decoration: underline;
     }
 }
 
-// @media (prefers-color-scheme: dark) {
-//     html {
-//         color-scheme: dark;
-//     }
-//     body {
-//         color: white;
-//         background: black;
-//     }
-// }
+#__next {
+    height: 100vh;
+    width: 100vw;
+}
