--- a/assets/scss/Home.module.scss
+++ b/assets/scss/Home.module.scss
@@ -150,16 +150,16 @@
         }
 
         .content {
-            display: flex;
+            // display: flex;
             position: relative;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            min-height: 30%;
-            height: auto;
-            max-height: 70%;
-            width: auto;
-            max-width: 100%;
+            // flex-direction: column;
+            // justify-content: center;
+            // align-items: center;
+            // min-height: 30%;
+            // height: auto;
+            // max-height: 70%;
+            // width: auto;
+            // max-width: 100%;
             border-top: 1px solid $background-color;
             border-bottom: 1px solid $background-color;
 
