--- a/assets/scss/Home.module.scss
+++ b/assets/scss/Home.module.scss
@@ -3,7 +3,7 @@
 .home {
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
     height: 100%;
     width: 100%;
@@ -33,7 +33,7 @@
             display: flex;
             position: relative;
             flex-direction: row;
-            justify-content: start;
+            justify-content: flex-start;
             align-items: center;
             min-height: 7vh;
             height: 8%;
@@ -73,7 +73,7 @@
             .text {
                 display: flex;
                 flex-direction: row;
-                justify-content: start;
+                justify-content: flex-start;
                 align-items: center;
                 min-height: 3vh;
                 height: 100%;
@@ -89,7 +89,7 @@
             .badges {
                 display: flex;
                 flex-direction: row;
-                justify-content: start;
+                justify-content: flex-start;
                 align-items: center;
                 min-height: 3vh;
                 height: 100%;
@@ -129,7 +129,7 @@
                     display: flex;
                     position: relative;
                     flex-direction: row;
-                    justify-content: start;
+                    justify-content: flex-start;
                     align-items: center;
                     min-height: 3vh;
                     height: 100%;
@@ -174,7 +174,7 @@
             span {
                 display: flex;
                 flex-direction: row;
-                justify-content: start;
+                justify-content: flex-start;
                 align-items: flex-start;
                 color: $text-color;
                 font-size: 2vh;
@@ -200,7 +200,7 @@
             .tagList {
                 display: flex;
                 flex-direction: row;
-                justify-content: start;
+                justify-content: flex-start;
                 align-items: center;
                 list-style-type: none;
                 height: 50%;
@@ -227,7 +227,7 @@
             .menu {
                 display: flex;
                 flex-direction: row;
-                justify-content: start;
+                justify-content: flex-start;
                 align-items: center;
                 list-style-type: none;
                 padding: 1vh 2vh 0 2vh;
