--- a/assets/scss/Sign.module.scss
+++ b/assets/scss/Sign.module.scss
@@ -12,7 +12,7 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
-        align-items: start;
+        align-items: flex-start;
         background-color: $hover-background-color;
         box-shadow: 15px 15px 0px 0px $second-background-color;
         border-radius: 15px;
